UN-carousal card issue fix

--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -104,6 +104,25 @@
             color: #FFA353;
          }
 
+         .swiper-slide-active.card1 {
+            background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.5))  center center, url(./assets/images/Learn.jpg) center center / cover no-repeat !important;
+         }
+         .swiper-slide-active.card2 {
+            background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.5))  center center, url(./assets/images/Think.jpg) center center / cover no-repeat !important;
+         }
+         .swiper-slide-active.card3 {
+            background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.5))  center center, url(./assets/images/Monitor.png) center center / cover no-repeat !important;
+         }
+         .swiper-slide-active.card4 {
+            background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.5))  center center, url(./assets/images/Run.png) center center / cover no-repeat !important;
+         }
+         .swiper-slide-active.card5 {
+            background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.5))  center center, url(./assets/images/Deploy.jpg) center center / cover no-repeat !important;
+         }
+         .swiper-slide-active.card6 {
+            background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.5))  center center, url(./assets/images/Code.png) center center / cover no-repeat !important;
+         }
+
          /* Mobile styles */
          @media (max-width: 768px) {
             .footer__menu {
@@ -503,7 +522,7 @@
                            <div class="container" style="padding-top: 25px;">
                               <div class="swiper swiper5 mySwiper">
                                  <div class="swiper-wrapper">
-                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.2)), url(./assets/images/Learn.jpg); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide card1" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.2)), url(./assets/images/Learn.jpg); background-position: center; color: white; text-align: center;">
                                        <div>
                                           <div >
                                              <h3 style="font-weight: 600; color: #fff;">
@@ -522,7 +541,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Think.jpg); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide card2" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Think.jpg); background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
                                              <h3 style="font-weight: 600; color: #fff;">
@@ -542,7 +561,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Monitor.png) center center / cover no-repeat; background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide card3" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Monitor.png) center center / cover no-repeat; background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
                                              <h3 style="font-weight: 600; color: #fff;">
@@ -559,7 +578,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Run.png); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide card4" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Run.png); background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
                                              <h3 style="font-weight: 600; color: #fff;">
@@ -577,7 +596,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Deploy.jpg); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide card5" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Deploy.jpg); background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
                                              <h3 style="font-weight: 600; color: #fff;">
@@ -596,7 +615,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="swiper-slide" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Code.png); background-position: center; color: white; text-align: center;">
+                                    <div class="swiper-slide card6" style="background: linear-gradient(to right, rgba(29, 32, 135, 0.9), rgba(156, 58, 138, 0.8)) center center, url(./assets/images/Code.png); background-position: center; color: white; text-align: center;">
                                        <div class="slide_carousel">
                                           <div >
                                              <h3 style="font-weight: 600; color: #fff;">
