UN-pricing page

--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -609,7 +609,7 @@
                                                    <li>Environment Provisioning (Azure, AWS, On-Prem)</li>
                                                    <li>Middleware & Security Tooling Configuration</li>
                                                    <li>Application Deployment & Orchestration</li>
-                                                   <li>Release Mgt. & Delivery Testing</li>
+                                                   <li>Release Management & Delivery Testing</li>
                                                 </ul>
                                              </div>
                                           </div>
