--- a/uniphynew/pricing/index.html
+++ b/uniphynew/pricing/index.html
@@ -45,7 +45,91 @@
 		.footer__menu .footer__first_childwidth {
 		  width: 17% !important;
 		}
-		
+
+      .card i
+      {
+        position: absolute;
+        top: 40px;
+        left: -15px;
+        width: 280px;
+        height:50px;
+        /* background: #af43f1; */
+        border-radius: 30px;
+        border-bottom-left-radius: 0;
+      }
+      .card i span {
+        height: 50px;
+        color: #fff;
+        font-weight: bold;
+        font-size: 18px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .card i::before
+      {
+        content: '';
+        position: absolute;
+        top: 50px;
+        width: 15px;
+        height: 30px;
+        /* background: #8045c6; */
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        z-index: 2;
+      }
+      .card i::after
+      {
+        content: '';
+        position: absolute;
+        top: 50px;
+        width: 15px;
+        height: 15px;
+        /* background: #af43f1; */
+        z-index: 1;
+      }
+      .pricing-box__price span,
+      .pricing-box__price-dynamic span
+      {
+         font-family: fantasy;
+         font-size: 50px;
+      }
+      .free-card i {
+         text-align: left;
+         background: linear-gradient(to right, rgb(0 225 162 / 90%), rgb(78 158 215 / 80%));
+      }
+      .free-card i::after {
+         text-align: left;
+         background: linear-gradient(to left, rgb(0 225 162 / 90%));
+      }
+      .free-card i::before {
+         background: #1e7a65;
+      }
+      .premium-card i {
+         text-align: left;
+         background: linear-gradient(to right, rgb(113 17 201 / 90%), rgb(199 8 175 / 80%));
+      }
+      .premium-card i::after {
+         text-align: left;
+         background: linear-gradient(to left, rgb(113 17 201 / 90%));
+      }
+      .premium-card i::before {
+         background: #521e7a;
+      }
+      .standard-card i {
+         text-align: left;
+         background: linear-gradient(to right, rgb(60 178 223 / 90%), rgb(113 17 201 / 80%));
+      }
+      .standard-card i::after {
+         text-align: left;
+         background: linear-gradient(to left, rgb(60 178 223 / 90%));
+      }
+      .standard-card i::before {
+         background: #264eab;
+      }
+
 		/* Mobile styles */
 		@media (max-width: 768px) {
   			.footer__menu {
@@ -279,13 +363,17 @@
                            </div>
                            <!-- .container -->
                            <div class="pricing__boxes">
-                              <div class="pricing-box static" style="border: 2px solid #52be96">
-                                 <h3 class="pricing-box__title" style="color:#52be96!important;">Free</h3>
-                                 <p class="pricing-box__subtitle" style="padding-bottom: 27px;">Infrastructure for small projects.</p>
-                                 <p class="pricing-box__price" style="color:#52be96!important;">$0/month</p>
+                              <div class="pricing-box static card free-card" style="border-radius: 20px; box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;">
+                                 <div style="height: 39px; margin-bottom: 22.5px; padding-bottom: 39px;">
+                                    <i><span>Free</span></i>
+                                 </div>
+                                 <!-- <h3 class="pricing-box__title" style="color:#52be96!important;">test</h3> -->
+                                 <!-- <p class="pricing-box__subtitle" style="padding-bottom: 27px;">Infrastructure for small projects.</p> -->
+                                 <p class="pricing-box__price" style="color:#3c3c3f!important;"><span>$0</span>/month</p>
                                  <p class="pricing-box__terms">For up to 50 resources</p>
                                  <a href="https://bridgecrew.cloud/" target="" class="ns-btn dp-btn-0">Start for free</a>
                                  <ul class="pricing-box__features list--check-green">
+                                    <li>Infrastructure for small projects</li>
                                     <li>Infrastructure powered by Uniphy</li>
                                     <li>Access to core Uniphy platform</li>
                                     <li>Pull request fixes for Infrastructure</li>
@@ -294,11 +382,14 @@
                               <style>
                                  #price-range-0::-webkit-slider-thumb{background-color:#52be96}#price-range-0::-moz-range-thumb{background-color:#52be96}
                               </style>
-                              <div class="pricing-box dynamic" style="border: 2px solid #662EFF">
-                                 <h3 class="pricing-box__title" style="color:#662EFF!important;">Standard</h3>
-                                 <p class="pricing-box__subtitle">Commit to cloud security coverage for teams.</p>
+                              <div class="pricing-box dynamic card standard-card" style="border-radius: 20px; box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;">
+                                 <div style="height: 39px; margin-bottom: 22.5px; padding-bottom: 39px;">
+                                    <i style="text-align: left;"><span>Standard</span></i>
+                                 </div>
+                                 <!-- <h3 class="pricing-box__title" style="color:#662EFF!important;">Standard</h3> -->
+                                 <!-- <p class="pricing-box__subtitle">Commit to cloud security coverage for teams.</p> -->
                                  <div class="pricing-box__dynamic" data-points='["150:99","160:158","180:276","200:394","220:512","240:630","260:748","280:866","300:984"]' data-color="#662EFF">
-                                    <p class="pricing-box__price-dynamic" style="color:#662EFF!important;">$<span class="dynamic-price" data-index="9">99</span>/mo</p>
+                                    <p class="pricing-box__price-dynamic" style="color:#3c3c3f!important;"><span>$<span class="dynamic-price" data-index="9">99</span></span>/month</p>
                                     <form class="pricing-box__dynamic-range">
                                        <input type="range" id="price-range-9" class="dynamic-range-slider" data-index="9" aria-labelledby="price-terms-9" step="11.111111111111">
                                        <p class="pricing-box__terms" id="price-terms-9" data-index="9">For <span class="dynamic-terms" data-index="9">150</span> resources</p>
@@ -306,6 +397,7 @@
                                  </div>
                                  <a href="https://bridgecrew.cloud/" target="" class="ns-btn dp-btn-1">Start free trial</a>
                                  <ul class="pricing-box__features list--check-green">
+                                    <li>Commit to cloud security coverage for teams</li>
                                     <li>Cloud and workload Infrastructure</li>
                                     <li>Resource and policy management</li>
                                     <li>Dashboards and reports</li>
@@ -315,13 +407,17 @@
                               <style>
                                  #price-range-9::-webkit-slider-thumb{background-color:#662EFF}#price-range-9::-moz-range-thumb{background-color:#662EFF}
                               </style>
-                              <div class="pricing-box static" style="border: 2px solid #122172">
-                                 <h3 class="pricing-box__title" style="color:#122172!important;">Premium</h3>
-                                 <p class="pricing-box__subtitle">Customized codified cloud security for your team.</p>
-                                 <p class="pricing-box__price" style="color:#122172!important;">Starts at $999/mo</p>
+                              <div class="pricing-box static card premium-card" style="border-radius: 20px; box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;">
+                                 <div style="height: 39px; margin-bottom: 22.5px; padding-bottom: 39px;">
+                                    <i style="text-align: left;"><span>Premium</span></i>
+                                 </div>
+                                 <!-- <h3 class="pricing-box__title" style="color:#122172!important;">Premium</h3> -->
+                                 <!-- <p class="pricing-box__subtitle">Customized codified cloud security for your team.</p> -->
+                                 <p class="pricing-box__price" style="color:#3c3c3f!important;"><span>$999</span>/month</p>
                                  <p class="pricing-box__terms">Custom resources</p>
                                  <a href="https://bridgecrew.io/schedule-a-demo/" target="" class="ns-btn dp-btn-2">Schedule a demo</a>
                                  <ul class="pricing-box__features list--check-green">
+                                    <li>Customized codified cloud security for your team</li>
                                     <li>Everything in Standard</li>
                                     <li>Roles and teams</li>
                                     <li>On-prem/self-hosted VCS</li>
@@ -333,9 +429,9 @@
                               </style>
                               <!-- Dynamic Pricing Table Styles -->
                               <style>
-                                 .dp-btn-0 { background: #52be96; border: 2px solid #52be96; } .dp-btn-0:hover { background: transparent; color: #52be96 }
-                                 .dp-btn-1 { background: #662EFF; border: 2px solid #662EFF; } .dp-btn-1:hover { background: transparent; color: #662EFF }
-                                 .dp-btn-2 { background: #122172; border: 2px solid #122172; } .dp-btn-2:hover { background: transparent; color: #122172 }
+                                 .dp-btn-0 { background: linear-gradient(to right, #2c339b, #d13389); } .dp-btn-0:hover { background: transparent; color: #1d2087 }
+                                 .dp-btn-1 { background: linear-gradient(to right, #2c339b, #d13389); } .dp-btn-1:hover { background: transparent; color: #1d2087 }
+                                 .dp-btn-2 { background: linear-gradient(to right, #2c339b, #d13389); } .dp-btn-2:hover { background: transparent; color: #1d2087 }
                               </style>
                               <!-- -->
                            </div>
