UN-update based on preedha review

--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -533,9 +533,9 @@
                                              <div>
                                                 <ul style="line-height: normal;  color: #fff; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
                                                    <li>AI-powered customer enquiry assistant</li>
-                                                   <li>Usage, Team & Business Analytics</li>
-                                                   <li>Outcome-based Experimentation</li>
-                                                   <li>Feedback Loop into Strategy & Design</li>
+                                                   <li>Usage, team & business analytics</li>
+                                                   <li>Outcome-based experimentation</li>
+                                                   <li>Feedback loop into strategy & design</li>
                                                 </ul>
                                              </div>
                                           </div>
@@ -555,7 +555,7 @@
                                                    <li>AI-powered requirement gathering</li>
                                                    <li>Architecture and technical design</li>
                                                    <li>Embeds monitoring & support design from the start</li>
-                                                   <li>Concept Validation & Capability Prioritization</li>
+                                                   <li>Concept validation & capability prioritization</li>
                                                 </ul>
                                              </div>
                                           </div>
@@ -606,10 +606,10 @@
                                           <div >
                                              <div>
                                                 <ul style="line-height: normal;  color: #fff; text-align: left; font-weight: 500; font-family: sofia-pro-soft, sans-serif;">
-                                                   <li>Environment Provisioning (Azure, AWS, On-Prem)</li>
-                                                   <li>Middleware & Security Tooling Configuration</li>
-                                                   <li>Application Deployment & Orchestration</li>
-                                                   <li>Release Management & Delivery Testing</li>
+                                                   <li>Environment provisioning (Azure, AWS, On-Prem)</li>
+                                                   <li>Middleware & Security tooling configuration</li>
+                                                   <li>Application deployment & orchestration</li>
+                                                   <li>Release Management & delivery testing</li>
                                                 </ul>
                                              </div>
                                           </div>
