--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -968,10 +968,10 @@
                               <div class="boxes__wrapper boxes__wrapper--columns-four">
                                  <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="margin-left: 0px; height: -webkit-fill-available !important;">
                                     <a target="" href="#">
-                                       <div class="boxes__box-item__image">
+                                       <!-- <div class="boxes__box-item__image">
                                           <h4 class="section-block__pre-title dynamic-pricing__pre-title" style="position: absolute; margin: 10px 15px 15px 15px;"><span>Manage</span></h4>
                                           <img width="85" height="85" src="../assets/images/abstract-shapes-13.svg" class="attachment-full size-full" alt="" loading="lazy" />
-                                       </div>
+                                       </div> -->
                                        <div class="boxes__box-item__content">
                                           <h3>Fast feedback loops, the ability to manage projects, software change</h3>
                                        </div>
@@ -979,10 +979,10 @@
                                  </div>
                                  <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="height: -webkit-fill-available !important;">
                                     <a target="" href="#">
-                                       <div class="boxes__box-item__image">
+                                       <!-- <div class="boxes__box-item__image">
                                           <h4 class="section-block__pre-title dynamic-pricing__pre-title" style="position: absolute; margin: 10px 15px 15px 15px;"><span>Deploy</span></h4>
                                           <img width="85" height="85" src="../assets/images/abstract-shapes-14.svg" class="attachment-full size-full" alt="" loading="lazy" />
-                                       </div>
+                                       </div> -->
                                        <div class="boxes__box-item__content">
                                           <h3>Deploy to multiple environments like staging and production</h3>
                                        </div>
@@ -990,10 +990,10 @@
                                  </div>
                                  <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="margin-right: 0px; height: -webkit-fill-available !important;">
                                     <a target="" href="#">
-                                       <div class="boxes__box-item__image">
+                                       <!-- <div class="boxes__box-item__image">
                                           <h4 class="section-block__pre-title dynamic-pricing__pre-title" style="position: absolute; margin: 10px 15px 15px 15px;"><span>Monitor</span></h4>
                                           <img width="85" height="85" src="../assets/images/abstract-shapes-15.svg" class="attachment-full size-full" alt="" loading="lazy" />
-                                       </div>
+                                       </div> -->
                                        <div class="boxes__box-item__content">
                                           <h3>Monitor, repair, remediate configuration drift and status of your application</h3>
                                        </div>
