UN-update on home and platform

--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -456,15 +456,15 @@
                               <li id="menu-item-5281" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5281"><a href="platform/index.html">Platform</a></li>
                               <li id="menu-item-6279" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="pricing/index.html">Pricing</a></li>
                               <li id="menu-item-1833" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
-                                 <a href="resources/index.html">Resources</a>
+                                 <a href="">Resources</a>
                               </li>
                            </ul>
                         </div>
                      </nav>
                   </div>
                   <div class="main-header__cta">
-                     <a href="" target="_blank" class="ns-btn ns-btn--text">Sign in</a>
-                     <a href="" target="_blank" class="ns-btn ns-btn--white">Sign up</a>
+                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
+                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
                   </div>
                </div>
                <div class="main-header__menu-mobile">
@@ -645,10 +645,10 @@
                         <section class="section-spacing-bottom  section-block--container-default section-block--theme-light-purple-wave boxes boxes-1 unified-operation-section" style="background-color: #1d2087;">
                            <div class="container">
                               <div class="section-block__header text-center boxes--columns-two">
-                                 <h1 class="section-block__title boxes__title ">All-in-one Unified Operation</h1>
+                                 <h1 class="section-block__title boxes__title ">All-in-One Unified Operation</h1>
                               </div>
                               <div class="boxes__wrapper boxes__wrapper--columns-two">
-                                 <div class="boxes__box-item boxes__box-item--align-center boxes__box-item--style-shadow" style="box-shadow: 0 12px 40px rgba(192, 174, 229, 0.5);">
+                                 <div class="boxes__box-item boxes__box-item--align-center boxes__box-item--style-shadow" style="box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); filter: brightness(99%);">
                                     <div class="boxes__box-item__image">
                                        <img width="185" height="185" src="assets/images/TecOps.png" class="attachment-full size-full" alt="" loading="lazy" />
                                     </div>
@@ -659,7 +659,7 @@
                                        <p>From a DevOps pipeline perspective UNIPHY offers its own DevOps stack including provisioning and orchestration with an intuitive UI.</p>
                                     </div>
                                  </div>
-                                 <div class="boxes__box-item boxes__box-item--align-center boxes__box-item--style-shadow" style="box-shadow: 0 12px 40px rgba(192, 174, 229, 0.5);">
+                                 <div class="boxes__box-item boxes__box-item--align-center boxes__box-item--style-shadow" style="box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); filter: brightness(99%);">
                                     <div class="boxes__box-item__image">
                                        <img width="185" height="185" src="assets/images/DevOps.png" class="attachment-full size-full" alt="" loading="lazy" />
                                     </div>
@@ -670,7 +670,7 @@
                                        <p>From a DevOps pipeline perspective UNIPHY offers its own DevOps stack including provisioning and orchestration with an intuitive UI.</p>
                                     </div>
                                  </div>
-                                 <div class="boxes__box-item boxes__box-item--align-center boxes__box-item--style-shadow" style="box-shadow: 0 12px 40px rgba(192, 174, 229, 0.5);">
+                                 <div class="boxes__box-item boxes__box-item--align-center boxes__box-item--style-shadow" style="box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); filter: brightness(99%);">
                                     <div class="boxes__box-item__image">
                                        <img width="185" height="185" src="assets/images/SecOps.png" class="attachment-full size-full" alt="" loading="lazy" />
                                     </div>
@@ -691,7 +691,7 @@
                            <div class="container">
                               <div class="cta__inner   cta__inner--default" style="background: linear-gradient(to right, #2c339b, #dd4196, #4c327b);">
                                  <div class="cta__content">
-                                    <h2>Uniphy is free to get started</h2>
+                                    <h2 style="font-weight: 500 !important;">Uniphy is free to get started</h2>
                                     <h3>Sign up to start automating your application lifecycle management</h3>
                                  </div>
                                  <div class="cta__buttons">
@@ -723,19 +723,38 @@
                         <a href="index.html">
                         <img src="assets/images/uniphy.svg" class="image wp-image-5578  attachment-medium size-medium" alt="Uniphy logo" loading="lazy" style="max-width: 100%; height: auto;" height="37.21" width="148.94" />
                         </a>
+                        <div class="clearfix"></div>
+                        <p><a href="mailto: support@uniphy.com"><strong>support@uniphy.com</strong></a></p>
                      </section>
                      <section id="text-2" class="widget-even widget-last widget-2 footer-widget widget_text">
                         <div class="textwidget">
-                           <ul class="social-footer" style="padding-left: 2.9rem;">
+                           <ul class="social-footer">
                               <li class="social-footer__item social-footer__item--linkedin"><a href="" target="_blank" rel="noopener"></a></li>
                               <li class="social-footer__item social-footer__item--twitter"><a href="" target="_blank" rel="noopener"></a></li>
                            </ul>
-                           <div class="clearfix"></div>
-                           <p><a href="mailto: support@uniphy.com"><strong>support@uniphy.com</strong></a></p>
+                        </div>
+                     </section>
+                     <section id="nav_menu-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                           <h4 class="footer-widget__title">Platform</h4>
+                           <div class="menu-platform-container">
+                              <ul id="menu-platform" class="menu">
+                                 <li id="menu-item-5284" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5284"><a href="platform/index.html">Features</a></li>
+                                 <li id="menu-item-6280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6280"><a href="pricing/index.html">Pricing</a></li>
+                              </ul>
+                           </div>
+                     </section>
+                     <section id="nav_menu-6" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <h4 class="footer-widget__title">Resources</h4>
+                        <div class="menu-resource-container">
+                           <ul id="menu-resource" class="menu">
+                              <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="">Documentation</a></li>
+                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="about/index.html">About Us</a></li>
+                              <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="schedule-a-demo/index.html">Schedule a demo</a></li>
+                           </ul>
                         </div>
                      </section>
                   </div>
-                  <div class="footer__menu">
+                  <!-- <div class="footer__menu">
                      <div class="main-footer__widgets__column footer__first_childwidth">
                         <section id="nav_menu-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
                            <h4 class="footer-widget__title">Platform</h4>
@@ -759,7 +778,7 @@
                            </div>
                         </section>
                      </div>
-                  </div>
+                  </div> -->
                </div>
                <div class="clearfix"></div>
                <div class="main-footer__copy">
