--- a/uniphynew/pricing/index.html
+++ b/uniphynew/pricing/index.html
@@ -389,10 +389,10 @@
                         <div class="menu-main-menu-container">
                            <div class="clearfix"></div>
                            <ul id="header-menu" class="menu">
-                              <li id="menu-item-5281" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5281"><a href="platform/index.html">Platform</a></li>
-                              <li id="menu-item-6279" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="pricing/index.html">Pricing</a></li>
+                              <li id="menu-item-5281" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5281"><a href="../platform/index.html">Platform</a></li>
+                              <li id="menu-item-6279" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="../pricing/index.html">Pricing</a></li>
                               <li id="menu-item-1833" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
-                                 <a href="resources/index.html">Resources</a>
+                                 <a href="../resources/index.html">Resources</a>
                               </li>
                            </ul>
                         </div>
@@ -884,7 +884,7 @@
                         <div class="container">
                            <div class="cta__inner   cta__inner--default" style="background: linear-gradient(to right, #2c339b, #dd4196, #4c327b);">
                               <div class="cta__content">
-                                 <h2>Uniphy is free to get started</h2>
+                                 <h2 style="font-weight: 500 !important;">Uniphy is free to get started</h2>
                                  <h3>Sign up to start automating your application lifecycle management</h3>
                               </div>
                               <div class="cta__buttons">
