--- a/uniphynew/schedule-a-demo/index.html
+++ b/uniphynew/schedule-a-demo/index.html
@@ -225,8 +225,8 @@
          background-color: transparent !important;
          background-image: none !important;
          }
-         a[href*="https://www.bridgecrew.cloud/login/signUp"],
-         a[href*="https://www.bridgecrew.cloud/login/signIn"]{
+         a[href*=""],
+         a[href*=""]{
          animation-name: activateLink;
          animation-duration: 3s;
          }
