--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -86,16 +86,6 @@
             height: 180px !important;
          }
 
-         .footer__menu {
-            display: flex;
-            justify-content: flex-end;
-            gap: 2rem;
-         }
-
-         .footer__menu .footer__first_childwidth {
-            width: 17% !important;
-         }
-
          .swiper5 .swiper-wrapper .swiper-slide li {
             list-style-type: disclosure-closed;
          }
@@ -125,14 +115,6 @@
 
          /* Mobile styles */
          @media (max-width: 768px) {
-            .footer__menu {
-               display: block;
-               /* default instead of flex */
-               justify-content: unset;
-               gap: unset;
-            }
-         
-            .main-footer__widgets .footer__menu .main-footer__widgets__column,
             .main-footer__widgets .main-footer__widgets__column {
                width: 100% !important;
                text-align: center;
@@ -718,23 +700,23 @@
          <footer class="main-footer">
             <div class="container">
                <div class="main-footer__widgets">
-                  <div class="main-footer__widgets__column">
+                  <div class="main-footer__widgets__column" style="display: flex; justify-content: space-between;">
                      <section id="media_image-2" class="widget-odd widget-first widget-1 footer-widget widget_media_image">
                         <a href="index.html">
-                        <img src="assets/images/uniphy.svg" class="image wp-image-5578  attachment-medium size-medium" alt="Uniphy logo" loading="lazy" style="max-width: 100%; height: auto;" height="37.21" width="148.94" />
+                        <img src="assets/images/uniphy.svg" class="image wp-image-5578  attachment-medium size-medium" alt="Uniphy logo" loading="lazy" style="max-width: 100%; height: auto;" height="44.21" width="148.94" />
                         </a>
                         <div class="clearfix"></div>
                         <p><a href="mailto: support@uniphy.com"><strong>support@uniphy.com</strong></a></p>
                      </section>
-                     <section id="text-2" class="widget-even widget-last widget-2 footer-widget widget_text">
-                        <div class="textwidget">
+                     <section id="text-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <div class="menu-resource-container">
                            <ul class="social-footer">
-                              <li class="social-footer__item social-footer__item--linkedin"><a href="" target="_blank" rel="noopener"></a></li>
-                              <li class="social-footer__item social-footer__item--twitter"><a href="" target="_blank" rel="noopener"></a></li>
+                              <li class="social-footer__item social-footer__item--linkedin"><a href="" target="_blank" rel="noopener" style="height: 44.21px; align-content: center; padding-bottom: 10px;"></a></li>
+                              <li class="social-footer__item social-footer__item--twitter"><a href="" target="_blank" rel="noopener" style="height: 45.21px; align-content: center; padding-top: 10px;"></a></li>
                            </ul>
                         </div>
                      </section>
-                     <section id="nav_menu-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                     <section id="nav_menu-1" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
                            <h4 class="footer-widget__title">Platform</h4>
                            <div class="menu-platform-container">
                               <ul id="menu-platform" class="menu">
@@ -743,42 +725,24 @@
                               </ul>
                            </div>
                      </section>
-                     <section id="nav_menu-6" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                     <section id="nav_menu-3" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
                         <h4 class="footer-widget__title">Resources</h4>
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu">
                               <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="">Documentation</a></li>
+                           </ul>
+                        </div>
+                     </section>
+                     <section id="nav_menu-3" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <h4 class="footer-widget__title">Contact Us</h4>
+                        <div class="menu-resource-container">
+                           <ul id="menu-resource" class="menu">
                               <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="about/index.html">About Us</a></li>
                               <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="schedule-a-demo/index.html">Schedule a demo</a></li>
                            </ul>
                         </div>
                      </section>
                   </div>
-                  <!-- <div class="footer__menu">
-                     <div class="main-footer__widgets__column footer__first_childwidth">
-                        <section id="nav_menu-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
-                           <h4 class="footer-widget__title">Platform</h4>
-                           <div class="menu-platform-container">
-                              <ul id="menu-platform" class="menu">
-                                 <li id="menu-item-5284" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5284"><a href="platform/index.html">Features</a></li>
-                                 <li id="menu-item-6280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6280"><a href="pricing/index.html">Pricing</a></li>
-                              </ul>
-                           </div>
-                        </section>
-                     </div>
-                     <div class="main-footer__widgets__column">
-                        <section id="nav_menu-6" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
-                           <h4 class="footer-widget__title">Resources</h4>
-                           <div class="menu-resource-container">
-                              <ul id="menu-resource" class="menu">
-                                 <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="">Documentation</a></li>
-                                 <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="about/index.html">About Us</a></li>
-                                 <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="schedule-a-demo/index.html">Schedule a demo</a></li>
-                              </ul>
-                           </div>
-                        </section>
-                     </div>
-                  </div> -->
                </div>
                <div class="clearfix"></div>
                <div class="main-footer__copy">
