--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -90,10 +90,10 @@
 		.platform-section2 {
 			background-image: url(../assets/images/devops-2.jpg) !important;
 		}
-      .evolution-landing {
-         border-radius: 20px;
-         box-shadow: 0 20px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      }
+      /* .evolution-landing {
+         border-radius: 20px; */
+         /* box-shadow: 0 20px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+      /* } */
 
       @media screen and (max-width:375px) {
          .evolution-section {
@@ -101,9 +101,11 @@
          }
          .img-evolution-landing-wide {
             display: none !important;
+            box-shadow: none;
          }
          .img-evolution-landing-mobile {
             display: block !important;
+            box-shadow: none;
          }
       }
       .img-evolution-landing-wide {
@@ -301,11 +303,8 @@
       .section-block {
          padding: 75px 0px !important;
       }
-      .section-block-top {
-         padding: 75px 0px 0px  0px !important;
-      }
-      .section-block-bottom {
-         padding: 0px 0px 75px 0px !important;
+      .section-spacing-top {
+         padding: 75px 0 0 0 !important;
       }
       .section-block-header {
          padding: 150px 0px !important;
@@ -366,8 +365,9 @@
   			}
          .main-footer__widgets .footer__menu .main-footer__widgets__column,
          .main-footer__widgets .main-footer__widgets__column {
-			width: 100% !important;
-         text-align: center;
+            display: block !important;
+            width: 100% !important;
+            justify-items: center;
 			}
          .boxes__box-item__image img {
             min-height: fit-content !important;
@@ -716,15 +716,15 @@
                               <li id="menu-item-5281" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-4691 current_page_item menu-item-5281"><a href="index.html" aria-current="page">Platform</a></li>
                               <li id="menu-item-6279" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="../pricing/index.html">Pricing</a></li>
                               <li id="menu-item-1833" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
-                                 <a href="../resources/index.html">Resources</a>
+                                 <a href="">Resources</a>
                               </li>
                            </ul>
                         </div>
                      </nav>
                   </div>
                   <div class="main-header__cta">
-                     <a href="" target="_blank" class="ns-btn ns-btn--text">Sign in</a>
-                     <a href="" target="_blank" class="ns-btn ns-btn--white">Sign up</a>
+                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
+                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
                   </div>
                </div>
                <div class="main-header__menu-mobile">
@@ -763,7 +763,7 @@
                            <!-- .container -->
                         </section>
                         <!-- .section -->
-                        <section class="section-block  section-block--container-default section-block--theme-light-purple section-block--theme-light-blue-wave-reverse content-image content-image-2 ">
+                        <section class="section-block  section-block--container-default section-block--theme-light-purple content-image content-image-2 ">
                            <div class="container evolution-section">
 							         <div class="section-block__header text-left boxes--columns-two" style="padding-bottom: 30px;">
                                  <h1 class="section-block__title boxes__title">Evolution Landscape</h1>
@@ -774,7 +774,7 @@
                            <!-- .container -->
                         </section>
                         <!-- .section -->
-                        <section class=" section-block--container-default content-image content-image-3" style="margin-bottom: 30px;">
+                        <section class=" section-block--container-default content-image content-image-3 section-spacing-top" style="margin-bottom: 30px;">
                            <div class="container challenges__section">
                               <div class="section-block__header text-right boxes--columns-two">
                                  <h1 class="section-block__title boxes__title ">Challenges We Solve</h1>
@@ -980,7 +980,7 @@
                                  <h1 class="section-block__title boxes__title">Uniphy is one application for the entire DevOps lifecycle</h1>
                               </div>
                               <div class="boxes__wrapper boxes__wrapper--columns-four">
-                                 <div class="boxes__box-item boxes__box-item--align-left" style="min-height: max-content !important;">
+                                 <div class="boxes__box-item boxes__box-item--align-center" style="min-height: max-content !important; justify-items: center;">
                                     <div class="boxes__box-item__image">
                                        <img width="85" height="85" src="../assets/images/system.png" class="attachment-full size-full" alt="" loading="lazy" />
                                     </div>
@@ -988,7 +988,7 @@
                                        <h3>Fast feedback loops, the ability to manage projects, software change</h3>
                                     </div>
                                  </div>
-                                 <div class="boxes__box-item boxes__box-item--align-left" style="min-height: max-content !important;">
+                                 <div class="boxes__box-item boxes__box-item--align-center" style="min-height: max-content !important; justify-items: center;">
                                     <div class="boxes__box-item__image">
                                        <img width="85" height="85" src="../assets/images/startup.png" class="attachment-full size-full" alt="" loading="lazy" />
                                     </div>
@@ -996,7 +996,7 @@
                                        <h3>Deploy to multiple environments like staging and production</h3>
                                     </div>
                                  </div>
-                                 <div class="boxes__box-item boxes__box-item--align-left" style="min-height: max-content !important;">
+                                 <div class="boxes__box-item boxes__box-item--align-center" style="min-height: max-content !important; justify-items: center;">
                                     <div class="boxes__box-item__image">
                                        <img width="85" height="85" src="../assets/images/remidiate.png" class="attachment-full size-full" alt="" loading="lazy" />
                                     </div>
@@ -1018,7 +1018,7 @@
                                  <div class="cta__buttons">
                                     <div class="cta-row cta-row--horizontal cta-row--center">
                                        <a class="ns-btn ns-btn--white " href="" target="">Get Started For Free</a>
-									            <a class="ns-btn ns-btn--white-border " href="schedule-a-demo/index.html" target="">Watch Demo</a>
+									            <a class="ns-btn ns-btn--white-border " href="../schedule-a-demo/index.html" target="">Watch Demo</a>
                                     </div>
                                  </div>
                               </div>
@@ -1040,48 +1040,57 @@
          <footer class="main-footer">
             <div class="container">
                <div class="main-footer__widgets">
-                  <div class="main-footer__widgets__column">
-                     <section id="media_image-2" class="widget-odd widget-first widget-1 footer-widget widget_media_image">
-						<a href="index.html">
-							<img src="../assets/images/uniphy.svg" class="image wp-image-5578  attachment-medium size-medium" alt="Uniphy logo" loading="lazy" style="max-width: 100%; height: auto;" height="37.21" width="148.94" />
-						</a>
-					</section>
-                     <section id="text-2" class="widget-even widget-last widget-2 footer-widget widget_text">
-                        <div class="textwidget">
-                           <ul class="social-footer" style="padding-left: 2.9rem;">
-                              <li class="social-footer__item social-footer__item--linkedin"><a href="" target="_blank" rel="noopener"></a></li>
-                              <li class="social-footer__item social-footer__item--twitter"><a href="" target="_blank" rel="noopener"></a></li>
-                           </ul>
-                           <div class="clearfix"></div>
-                           <p><a href="mailto: support@uniphy.com"><strong>support@uniphy.com</strong></a></p>
-                        </div>
-                     </section>
-                  </div>
-				  <div class="footer__menu">
-                  <div class="main-footer__widgets__column footer__first_childwidth">
-                     <section id="nav_menu-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
-                        <h4 class="footer-widget__title">Platform</h4>
-                        <div class="menu-platform-container">
-                           <ul id="menu-platform" class="menu">
-                              <li id="menu-item-5284" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5284"><a href="platform/index.html">Features</a></li>
-                              <li id="menu-item-6280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6280"><a href="pricing/index.html">Pricing</a></li>
+                  <div class="main-footer__widgets__column" style="display: flex; justify-content: space-between;">
+                     <section id="media_image-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <div class="menu-resource-container">
+                           <ul id="menu-resource" class="menu" style="margin-top: 0;">
+                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="align-content: center; margin-bottom: 10px; height: 45px !important;">
+                                 <a href="../index.html">
+                                    <img src="../assets/images/uniphy.svg" class="image wp-image-5578  attachment-medium size-medium" alt="Uniphy logo" loading="lazy" style="max-width: 100%; height: auto;" height="44.21" width="148.94" />
+                                 </a>
+                              </li>
+                              <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823" style="align-content: center; height: 45px !important;">
+                                 <p><a href="mailto: support@uniphy.com"><strong>support@uniphy.com</strong></a></p>
+                              </li>
                            </ul>
                         </div>
                      </section>
-                  </div>
-                  <div class="main-footer__widgets__column">
-                     <section id="nav_menu-6" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                     <section id="text-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <h4 class="footer-widget__title">Social Media</h4>
+                        <div class="menu-resource-container">
+                           <ul id="menu-resource" class="menu" style="margin-top: 0;">
+                              <li id="menu-item-1843" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important;"><a href="" target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">LinkedIn</span></a></li>
+                              <li id="menu-item-3823" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-post_type menu-item-object-page menu-item-3823" style="display: flex; align-items: center; height: 45px !important;"><a href="" target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">Twitter</span></a></li>
+                           </ul>
+                        </div>
+                     </section>
+                     <section id="nav_menu-1" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                           <h4 class="footer-widget__title">Platform</h4>
+                           <div class="menu-platform-container">
+                              <ul id="menu-platform" class="menu">
+                                 <li id="menu-item-5284" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5284"><a href="../platform/index.html">Features</a></li>
+                                 <li id="menu-item-6280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6280"><a href="../pricing/index.html">Pricing</a></li>
+                              </ul>
+                           </div>
+                     </section>
+                     <section id="nav_menu-3" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
                         <h4 class="footer-widget__title">Resources</h4>
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu">
                               <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="">Documentation</a></li>
-                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="about/index.html">About Us</a></li>
-                              <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="schedule-a-demo/index.html">Schedule a demo</a></li>
+                           </ul>
+                        </div>
+                     </section>
+                     <section id="nav_menu-3" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <h4 class="footer-widget__title">Contact Us</h4>
+                        <div class="menu-resource-container">
+                           <ul id="menu-resource" class="menu">
+                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="#">About Us</a></li>
+                              <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="../schedule-a-demo/index.html">Schedule a demo</a></li>
                            </ul>
                         </div>
                      </section>
                   </div>
-				  </div>
                </div>
                <div class="clearfix"></div>
                <div class="main-footer__copy">
@@ -1094,7 +1103,7 @@
                         <li id="menu-item-5780" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5780"><a href="https://www.paloaltonetworks.com/legal-notices/terms-of-use">Terms of Use</a></li>
                         <li id="menu-item-5577" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5577"><a target="_blank" rel="noopener" href="https://www.paloaltonetworks.com/content/dam/pan/en_US/assets/pdf/legal/palo-alto-networks-end-user-license-agreement-eula.pdf">End User License Agreement</a></li>
                      </ul>
-                  </div> -->
+                     </div> -->
                   <div class="clearfix"></div>
                </div>
             </div>
@@ -1108,12 +1117,12 @@
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5281"><a href="index.html" aria-current="page">Platform</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="../pricing/index.html">Pricing</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
-               <a href="../resources/index.html">Resources</a>
+               <a href="">Resources</a>
             </li>
          </ul>
          <div class="ns-mobile-menu__cta">
-            <a href="" target="_blank" class="ns-btn ns-btn--purple">Sign up</a><br>
-            <a href="" target="_blank" class="ns-btn ns-btn--underline">Sign in</a>
+            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--purple" rel="noopener noreferrer">Sign up</a><br>
+            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--underline" rel="noopener noreferrer">Sign in</a>
          </div>
       </div>
       <!--googleoff: all-->
