--- a/uniphynew/schedule-a-demo/index.html
+++ b/uniphynew/schedule-a-demo/index.html
@@ -55,8 +55,9 @@
   		 }
          .main-footer__widgets .footer__menu .main-footer__widgets__column,
          .main-footer__widgets .main-footer__widgets__column {
-			width: 100% !important;
-         text-align: center;
+            display: block !important;
+            width: 100% !important;
+            justify-items: center;
 			}
          .boxes__box-item__image img {
             min-height: fit-content !important;
@@ -70,6 +71,9 @@
             text-align: center;
          }
 		 }
+      .main-footer .footer-widget p {
+         font-size: 0.9801em !important;
+      }
       </style>
       <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
       <!-- This site is optimized with the Yoast SEO plugin v17.2 - https://yoast.com/wordpress/plugins/seo/ -->
@@ -260,17 +264,16 @@
                            <ul id="header-menu" class="menu">
                               <li id="menu-item-5281" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5281"><a href="../platform/index.html">Platform</a></li>
                               <li id="menu-item-6279" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="../pricing/index.html">Pricing</a></li>
-                              <li id="menu-item-1832" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1832"><a href="../customers/index.html">Customers</a></li>
                               <li id="menu-item-1833" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
-                                 <a href="../resources/index.html">Resources</a>
+                                 <a href="">Resources</a>
                               </li>
                            </ul>
                         </div>
                      </nav>
                   </div>
                   <div class="main-header__cta">
-                     <a href="" target="_blank" class="ns-btn ns-btn--text">Sign in</a>
-                     <a href="" target="_blank" class="ns-btn ns-btn--white">Sign up</a>
+                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
+                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
                   </div>
                </div>
                <div class="main-header__menu-mobile">
@@ -293,7 +296,7 @@
                               <div class="content-image__inner content-image__inner--image-center content-image__inner--">
                                  <div class="content-image__content content-image__content--full-width    content-image__content--smaller-title">
                                     <div class="section-block__header text-center ">
-                                       <h1 class="section-block__title content-image__title section-block__title--with-subtitle content-image__title--with-subtitle">Schedule a Bridgecrew demo</h1>
+                                       <h1 class="section-block__title content-image__title section-block__title--with-subtitle content-image__title--with-subtitle">Schedule a Uniphy demo</h1>
                                        <h4 class="section-block__subtitle content-image__subtitle"><br><br></h4>
                                     </div>
                                     <div class="section-block__image section-block__image--align-center">
@@ -311,8 +314,8 @@
 						   <div class="content-image__inner content-image__inner--image-right content-image__inner--">
 						      <div class="content-image__content content-image__content--full-width    ">
 						         <div class="section-block__header text-center ">
-						            <h3 class="section-block__title content-image__title section-block__title--with-subtitle content-image__title--with-subtitle"><br><br>Want to learn more about our all-in-one DevSecOps solution?</h3>
-						            <h4 class="section-block__subtitle content-image__subtitle"><br>Fill out the form below to schedule a personalized demo with one of our cloud security experts, or <a href="../webinar/getting-started-with-bridgecrew-demo-with-live-qa/index7ebe.html?utm_medium=directtraffic&amp;utm_source=https://bridgecrew.io/schedule-a-demo/&amp;utm_content=monthly-demo">join our monthly demo with live Q&A</a>.<br><br></h4>
+						            <h3 class="section-block__title content-image__title section-block__title--with-subtitle content-image__title--with-subtitle"><br><br>Want to learn more about our all-in-one solution?</h3>
+						            <h4 class="section-block__subtitle content-image__subtitle"><br>Fill out the form below to schedule a personalized demo with one of our cloud security experts.<br><br></h4>
 						         </div>
 						         <!-- Form -->
 						         <form class="js-validate card shadow-lg mb-4 contact-form"  action="javascript:submitform();" style="background: #f4f7fe; border-radius: 10px">
@@ -427,51 +430,60 @@
             <!-- .site-main -->
          </div>
          <!-- .content-area -->
-		<footer class="main-footer">
+         <footer class="main-footer">
             <div class="container">
                <div class="main-footer__widgets">
-                  <div class="main-footer__widgets__column">
-                     <section id="media_image-2" class="widget-odd widget-first widget-1 footer-widget widget_media_image">
-						<a href="index.html">
-							<img src="../assets/images/uniphy.svg" class="image wp-image-5578  attachment-medium size-medium" alt="Uniphy logo" loading="lazy" style="max-width: 100%; height: auto;" height="37.21" width="148.94" />
-						</a>
-					</section>
-                     <section id="text-2" class="widget-even widget-last widget-2 footer-widget widget_text">
-                        <div class="textwidget">
-                           <ul class="social-footer" style="padding-left: 2.9rem;">
-                              <li class="social-footer__item social-footer__item--linkedin"><a href="" target="_blank" rel="noopener"></a></li>
-                              <li class="social-footer__item social-footer__item--twitter"><a href="" target="_blank" rel="noopener"></a></li>
-                           </ul>
-                           <div class="clearfix"></div>
-                           <p><a href="mailto: support@uniphy.com"><strong>support@uniphy.com</strong></a></p>
-                        </div>
-                     </section>
-                  </div>
-				  <div class="footer__menu">
-                  <div class="main-footer__widgets__column footer__first_childwidth">
-                     <section id="nav_menu-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
-                        <h4 class="footer-widget__title">Platform</h4>
-                        <div class="menu-platform-container">
-                           <ul id="menu-platform" class="menu">
-                              <li id="menu-item-5284" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5284"><a href="platform/index.html">Features</a></li>
-                              <li id="menu-item-6280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6280"><a href="pricing/index.html">Pricing</a></li>
+                  <div class="main-footer__widgets__column" style="display: flex; justify-content: space-between;">
+                     <section id="media_image-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <div class="menu-resource-container">
+                           <ul id="menu-resource" class="menu" style="margin-top: 0;">
+                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="align-content: center; margin-bottom: 10px; height: 45px !important;">
+                                 <a href="index.html">
+                                    <img src="../assets/images/uniphy.svg" class="image wp-image-5578  attachment-medium size-medium" alt="Uniphy logo" loading="lazy" style="max-width: 100%; height: auto;" height="44.21" width="148.94" />
+                                 </a>
+                              </li>
+                              <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823" style="align-content: center; height: 45px !important;">
+                                 <p><a href="mailto: support@uniphy.com"><strong>support@uniphy.com</strong></a></p>
+                              </li>
                            </ul>
                         </div>
                      </section>
-                  </div>
-                  <div class="main-footer__widgets__column">
-                     <section id="nav_menu-6" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                     <section id="text-2" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <h4 class="footer-widget__title">Social Media</h4>
+                        <div class="menu-resource-container">
+                           <ul id="menu-resource" class="menu" style="margin-top: 0;">
+                              <li id="menu-item-1843" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="align-content: center; height: 45px !important;"><a href="" target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">LinkedIn</span></a></li>
+                              <li id="menu-item-3823" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-post_type menu-item-object-page menu-item-3823" style="align-content: center; height: 45px !important;"><a href="" target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">Twitter</span></a></li>
+                           </ul>
+                        </div>
+                     </section>
+                     <section id="nav_menu-1" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                           <h4 class="footer-widget__title">Platform</h4>
+                           <div class="menu-platform-container">
+                              <ul id="menu-resource" class="menu" style="margin-top: 0;">
+                                 <li id="menu-item-1843" class="social-footer__item social-footer__item--linkedin menu-item menu-item-type-post_type menu-item-object-page menu-item-1843" style="display: flex; align-items: center; height: 45px !important;"><a href="" target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">LinkedIn</span></a></li>
+                                 <li id="menu-item-3823" class="social-footer__item social-footer__item--twitter menu-item menu-item-type-post_type menu-item-object-page menu-item-3823" style="display: flex; align-items: center; height: 45px !important;"><a href="" target="_blank" rel="noopener"><span style="font-size: medium; padding-left: 10px;">Twitter</span></a></li>
+                              </ul>
+                           </div>
+                     </section>
+                     <section id="nav_menu-3" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
                         <h4 class="footer-widget__title">Resources</h4>
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu">
                               <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="">Documentation</a></li>
-                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="about/index.html">About Us</a></li>
+                           </ul>
+                        </div>
+                     </section>
+                     <section id="nav_menu-3" class="widget-odd widget-last widget-first widget-1 footer-widget widget_nav_menu">
+                        <h4 class="footer-widget__title">Contact Us</h4>
+                        <div class="menu-resource-container">
+                           <ul id="menu-resource" class="menu">
+                              <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="">About Us</a></li>
                               <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="schedule-a-demo/index.html">Schedule a demo</a></li>
                            </ul>
                         </div>
                      </section>
                   </div>
-				  </div>
                </div>
                <div class="clearfix"></div>
                <div class="main-footer__copy">
@@ -484,7 +496,7 @@
                         <li id="menu-item-5780" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5780"><a href="https://www.paloaltonetworks.com/legal-notices/terms-of-use">Terms of Use</a></li>
                         <li id="menu-item-5577" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-5577"><a target="_blank" rel="noopener" href="https://www.paloaltonetworks.com/content/dam/pan/en_US/assets/pdf/legal/palo-alto-networks-end-user-license-agreement-eula.pdf">End User License Agreement</a></li>
                      </ul>
-                  </div> -->
+                     </div> -->
                   <div class="clearfix"></div>
                </div>
             </div>
@@ -499,12 +511,12 @@
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="../pricing/index.html">Pricing</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1832"><a href="../customers/index.html">Customers</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
-               <a href="../resources/index.html">Resources</a>
+               <a href="">Resources</a>
             </li>
          </ul>
          <div class="ns-mobile-menu__cta">
-            <a href="" target="_blank" class="ns-btn ns-btn--purple">Sign up</a><br>
-            <a href="" target="_blank" class="ns-btn ns-btn--underline">Sign in</a>
+            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--purple" rel="noopener noreferrer">Sign up</a><br>
+            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--underline" rel="noopener noreferrer">Sign in</a>
          </div>
       </div>
       <!--googleoff: all-->
@@ -594,6 +606,7 @@
          // window.intercomSettings = {
          //   app_id: "adquux25"
          // };
+         document.getElementById("year").textContent = new Date().getFullYear();
       </script>
       <script>
          // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/adquux25'
